--- a/newspapers/static/css/cart.css
+++ b/newspapers/static/css/cart.css
@@ -4,12 +4,10 @@
 	left: 70vw;
 	top: 15vh;
 	width: 25vw;
-	height: 50vh;
-	border: 1px solid blue;
+	min-height: 20vh;
+	border: 0.2vmin solid blue;
 	border-radius: 5vmin;
-	display: flex;
-	flex-direction: column;
-	direction: ltr;
+	display: inline-block;
 }
 
 .cart-title {
@@ -23,4 +21,73 @@
 	background: blue;
 	border-top-left-radius : 5vmin;
 	border-top-right-radius : 5vmin;
+}
+
+.cart form {
+	margin: 0;
+	padding: 0;
+	width: 100%;
+	height: 100%;
+}
+
+.items {
+}
+
+.item {
+	font-style: 'Lobster';
+	font-size: 1.5vmin;
+	padding: 1vmin 2vmin;
+	width: 100%;
+	border-top: 0.1vmin solid blue;
+	display: inline-block;
+}
+
+
+.pull-right {
+	float: right;
+}
+
+.delete-btn {
+	font-style: 'Lobster';
+	font-size: 0.75vmin;
+	padding: 0.5vmin;
+}
+
+.price {
+	text-align: center;
+}
+
+.cart-buttons {
+	padding-left: 2vw;
+	padding-right: 2vw;
+	width: 100%;
+	position: absolute;
+	bottom: -6vh;
+	display: inline-block;
+}
+
+.cart-buttons .buy-btn {
+	font-style: 'Lobster';
+	font-size: 1.5vmin;
+	padding: 1vmin 3vmin;
+	float: left;
+	left: 3.5vmin;
+}
+
+.cart-buttons .dismiss-btn {
+	font-style: 'Lobster';
+	font-size: 1.5vmin;
+	padding: 1vmin 2vmin;
+	float: right;
+	right: 3.5vmin;
+}
+
+.total_price {
+	width: 100%;
+	position: absolute;
+	bottom: -7vh;
+	text-align: center;
+	font-size: 2vmin;
+	font-weight: bold;
+	z-index: -1;
 }
